--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             fill="#ff7aa2"/>
     </svg>
 
-    <h1>sena will you be my valentine?</h1>
+    <h1>sena will you be my valentine? ♾️</h1>
 
     <section class="button-zone" id="zone">
       <button id="yesBtn">Yes</button>
@@ -182,7 +182,7 @@
     <div class="hint" id="hint">“No” seems a bit shy 😈</div>
 
     <section class="result" id="result">
-      <h2>YAY! 🎉</h2>
+      <h2>Seninle var olmak istiyorum! 😘❤️</h2>
       <img
         class="fireworks"
         src="https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif"
@@ -300,5 +300,6 @@
   </script>
 </body>
 </html>
+
 
 
