--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <h2>Seninle var olmak istiyorum! 😘❤️</h2>
       <img
         class="fireworks"
-        src="https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif"
+        src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExdDUzenI3eDgwcG13N3g1NHV5NTV1M2I2cWx2cHhtdnNld3BycWVrcCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/DPBKu3LaJ5Ux2FqIWr/giphy.gif"
         alt="Fireworks"
       />
     </section>
@@ -300,6 +300,7 @@
   </script>
 </body>
 </html>
+
 
 
 
